:white_check_mark: 새로운 기능에 맞춰 테스트코드 재 작성